...
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ww9-xd-yNH">
                                <rect key="frame" x="161" y="553" width="53" height="34"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <state key="normal" title="Got it!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="finishTapped:" destination="bH9-go-J01" eventType="touchUpInside" id="jqc-O3-uNd"/>
                                </connections>
                            </button>
...
